<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
            android:title="@string/pref_cat_network">
        <Preference
                android:key="@string/key_ip_v4_address"
                android:title="@string/pref_ipv4_address"
                android:summary="@string/summary_ipv4_address"/>
        <EditTextPreference
                android:key="@string/key_port"
                android:title="@string/pref_port"
                android:summary="@string/summary_race_on"
                android:defaultValue="@string/default_port"
                app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:key="@string/key_data_processing"
            android:title="@string/pref_cat_data_processing"
            app:initialExpandedChildrenCount="1">
        <CheckBoxPreference
                android:key="@string/key_race_on"
                android:title="@string/pref_race_on"
                android:defaultValue="@string/default_race_on"
                android:summary="@string/summary_race_on"/>
        <ListPreference
                android:key="@string/key_processing_rate"
                android:title="@string/pref_processing_rate"
                android:entries="@array/entries_processing_rates"
                android:entryValues="@array/entry_values_processing_rates"
                android:defaultValue="@string/default_processing_rate"
                app:useSimpleSummaryProvider="true"/>
        <ListPreference
                android:key="@string/key_calculation_rate"
                android:title="@string/pref_calculation_rate"
                android:entries="@array/entries_processing_rates"
                android:entryValues="@array/entry_values_processing_rates"
                android:defaultValue="@string/default_calculation_rate"
                app:useSimpleSummaryProvider="true"/>
        <ListPreference
                android:key="@string/key_sector_calculation_rate"
                android:title="@string/pref_sector_calculation_rate"
                android:entries="@array/entries_sector_rates"
                android:entryValues="@array/entry_values_sector_rates"
                android:defaultValue="@string/default_sector_calculation_rate"
                app:useSimpleSummaryProvider="true"/>   <!-- Todo: default value does not work. -->
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_cat_environment_and_track">
        <ListPreference
                android:key="@string/key_environment"
                android:title="@string/pref_environment"
                android:entries="@array/environments"
                android:entryValues="@array/environments"
                app:useSimpleSummaryProvider="true"/>
        <ListPreference
                android:key="@string/key_track"
                android:title="@string/pref_track"
                android:entries="@array/tracks"
                android:entryValues="@array/tracks"
                app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_cat_look_and_feel">
        <ListPreference
                android:key="@string/key_theme"
                android:title="@string/pref_theme"
                android:entries="@array/entries_themes"
                android:entryValues="@array/entry_values_themes"
                android:defaultValue="@string/default_theme"
                app:useSimpleSummaryProvider="true"/>   <!-- Todo: default value does not work. -->
    </PreferenceCategory>
</PreferenceScreen>