<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">
        <TextView
                android:fontFamily="sans-serif-thin"
                android:id="@+id/tvAppName"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:contentDescription="@string/app_icon_description"
                android:id="@+id/ivAppIcon"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvAppName"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:fontFamily="sans-serif-thin"
                android:id="@+id/tvVersion"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/version_placeholder"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAppIcon"/>
        <TextView
                android:fontFamily="sans-serif-thin"
                android:id="@+id/tvLicense"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/license"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
                android:layout_marginTop="10dp"/>
        <TextView
                android:fontFamily="sans-serif-thin"
                android:id="@+id/tvAuthor"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/author"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvVersion"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>